# md_explorer_mcp

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
notes/: architecture.md  changelog.md  examples.md  getting-started.md
src/md_explorer_mcp/: __main__.py  config.py  resources.py  security.py  server.py  tools.py
test/: test_security.py
tests/: test_resources.py  test_security.py  test_tools.py
