[project]
name = "md-explorer-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[tools.setuptools.packages]
packages = [{include = "md_explorer_mcp", from = "src"}]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, pyflakes, isort
